--- a/app/main-page.html
+++ b/app/main-page.html
@@ -88,56 +88,95 @@
                     <div class="field__wrap">
                       <div class="select">
                         <div class="select__head">Men’s T-Shirt - $18</div>
-                        <select class="select__el js-select">
+                        <select class="select__el js-select js-product-select">
                           <option>Men’s T-Shirt - $18</option>
                           <option>Men’s T-Shirt - $19</option>
-                          <option>Men’s T-Shirt - $20</option>
                         </select>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="option">
-                  <div class="option__title">COLOR<span class="option__selected">- Heather Grey</span></div>
-                  <div class="option__list">
-                    <label class="option__item">
-                      <input type="radio" name="opt1" checked class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
-                    </label>
-                    <label class="option__item">
-                      <input type="radio" name="opt1" class="option__input"><span class="option__var"> <img src="img/texture.jpg" alt="" class="option__pic"></span>
-                    </label>
+                <div class="product__options-wrap">
+                  <div style="display: block;" class="product__options-item js-product-item">
+                    <div class="option">
+                      <div class="option__title">COLOR<span style="display: none;" class="option__selected">- Heather Grey</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt1" checked class="option__input"><span class="option__var"> <span style="background: red;" class="option__color"></span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt1" class="option__input"><span class="option__var"> <span style="background: green;" class="option__color"></span></span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="option">
+                      <div class="option__title">size<span style="display: none;" class="option__selected">- Large</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt2" checked class="option__input"><span class="option__var"> <span class="option__size">S</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">L</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XL</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XXL</span></span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="sizes">
+                      <div class="sizes__head"><a href="#" class="sizes__link link js-sizes-link">Show sizing chart and product details</a>
+                      </div>
+                      <div class="sizes__wrap js-sizes">
+                        <div class="sizes__content">
+                          <ul>
+                            <li>Product Detail #1</li>
+                            <li>Product Detail #2</li>
+                          </ul>
+                        </div>
+                        <div class="sizes__table"><img src="img/sizes.jpg" alt="" class="sizes__table-pic"></div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-                <div class="option">
-                  <div class="option__title">size<span class="option__selected">- Large</span></div>
-                  <div class="option__list">
-                    <label class="option__item">
-                      <input type="radio" name="opt2" checked class="option__input"><span class="option__var"> <span class="option__size">S</span></span>
-                    </label>
-                    <label class="option__item">
-                      <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
-                    </label>
-                    <label class="option__item">
-                      <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">L</span></span>
-                    </label>
-                    <label class="option__item">
-                      <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XL</span></span>
-                    </label>
-                    <label class="option__item">
-                      <input type="radio" name="opt2" class="option__input"><span class="option__var"> <span class="option__size">XXL</span></span>
-                    </label>
+                  <div class="product__options-item js-product-item">
+                    <div class="option">
+                      <div class="option__title">COLOR<span style="display: none;" class="option__selected">- Heather Grey</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt3" checked class="option__input"><span class="option__var"> <span style="background: red;" class="option__color"></span></span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="option">
+                      <div class="option__title">size<span style="display: none;" class="option__selected">- Large</span></div>
+                      <div class="option__list">
+                        <label class="option__item">
+                          <input type="radio" name="opt4" checked class="option__input"><span class="option__var"> <span class="option__size">S</span></span>
+                        </label>
+                        <label class="option__item">
+                          <input type="radio" name="opt4" class="option__input"><span class="option__var"> <span class="option__size">M</span></span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="sizes">
+                      <div class="sizes__head"><a href="#" class="sizes__link link js-sizes-link">Show sizing chart and product details</a>
+                      </div>
+                      <div class="sizes__wrap js-sizes">
+                        <div class="sizes__content">
+                          <ul>
+                            <li>Product Detail #1</li>
+                            <li>Product Detail #2</li>
+                          </ul>
+                        </div>
+                        <div class="sizes__table"><img src="img/sizes.jpg" alt="" class="sizes__table-pic"></div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
-              <div class="sizes">
-                <div class="sizes__head"><a href="#" class="sizes__link link js-sizes-link">Show sizing chart and product details</a>
-                </div>
-                <div class="sizes__wrap js-sizes">
-                  <div class="sizes__list">
-                    <div class="sizes__product">Product Detail #1</div>
-                    <div class="sizes__product">Product Detail #2</div>
-                  </div>
-                  <div class="sizes__table"><img src="img/sizes.jpg" alt="" class="sizes__table-pic"></div>
                 </div>
               </div>
               <button class="product__btn btn">BUY IT NOW</button>
